--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!--parent>
-    <groupId>org.nuxeo.ecm.webengine</groupId>
-    <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.2-SNAPSHOT</version>
-  </parent-->
 
+  <parent>
+    <groupId>org.nuxeo</groupId>
+    <artifactId>nuxeo-ecm</artifactId>
+    <version>5.2.0.m4</version>
+  </parent>
+
+  <groupId>org.nuxeo.build</groupId>
   <artifactId>nuxeo-webengine-apt</artifactId>
   <name>Nuxeo WebEngine APT extensions</name>
   <description>WebEngine's APT extensions for annotation indexing.</description>
-  <groupId>org.nuxeo.build</groupId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
 
   <profiles>
     <profile>
@@ -37,76 +37,104 @@
     </profile>
   </profiles>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-          </archive>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <!--  <build>-->
+  <!--    <plugins>-->
+  <!--      <plugin>-->
+  <!--        <groupId>org.apache.maven.plugins</groupId>-->
+  <!--        <artifactId>maven-compiler-plugin</artifactId>-->
+  <!--        <configuration>-->
+  <!--          <source>1.5</source>-->
+  <!--          <target>1.5</target>-->
+  <!--        </configuration>-->
+  <!--      </plugin>-->
+  <!--      <plugin>-->
+  <!--        <groupId>org.apache.maven.plugins</groupId>-->
+  <!--        <artifactId>maven-jar-plugin</artifactId>-->
+  <!--        <configuration>-->
+  <!--          <archive>-->
+  <!--
+    <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+  -->
+  <!--          </archive>-->
+  <!--        </configuration>-->
+  <!--      </plugin>-->
+  <!--    </plugins>-->
+  <!--  </build>-->
 
-  <repositories>                                                                                                                                            
-    <repository>                                                                                                                                            
-      <id>public</id>                                                                                                                                       
-      <url>http://maven.nuxeo.org/public</url>                                                                                                              
-      <snapshots>                                                                                                                                           
-        <enabled>false</enabled>                                                                                                                            
-      </snapshots>                                                                                                                                          
-    </repository>                                                                                                                                           
-    <repository>                                                                                                                                            
-      <id>public-snapshot</id>                                                                                                                              
-      <url>http://maven.nuxeo.org/public-snapshot</url>                                                                                                     
-      <snapshots>                                                                                                                                           
-        <enabled>true</enabled>                                                                                                                             
-      </snapshots>                                                                                                                                          
-    </repository>                                                                                                                                           
-  </repositories>                                                                                                                                           
-                                                                                                                                                            
-  <distributionManagement>                                                                                                                                  
-    <site>                                                                                                                                                  
-      <id>maven-website</id>                                                                                                                                
-      <url>scpexe://gironde.nuxeo.com/home/mavenweb/site/</url>                                                                                             
-    </site>                                                                                                                                                 
-    <repository>                                                                                                                                            
-      <id>nuxeo-release</id>                                                                                                                                
-      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-release</url>                                                                             
-    </repository>                                                                                                                                           
-    <snapshotRepository>                                                                                                                                    
-      <id>nuxeo-snapshot</id>                                                                                                                               
-      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-snapshot</url>                                                                            
-    </snapshotRepository>                                                                                                                                   
-  </distributionManagement> 
+  <developers>
+    <developer>
+      <id>BS</id>
+      <name>Bogdan Stefanescu</name>
+      <email>bs@nuxeo.com</email>
+    </developer>
+  </developers>
 
-  <pluginRepositories>                                                                                                                                      
-    <pluginRepository>                                                                                                                                      
-      <id>public</id>                                                                                                                                       
-      <url>http://maven.nuxeo.org/public</url>                                                                                                              
-      <releases>                                                                                                                                            
-        <enabled>true</enabled>                                                                                                                             
-      </releases>                                                                                                                                           
-    </pluginRepository>                                                                                                                                     
-    <pluginRepository>                                                                                                                                      
-      <id>public-snapshot</id>                                                                                                                              
-      <url>http://maven.nuxeo.org/public-snapshot</url>                                                                                                     
-      <name>Nuxeo virtual snapshot repository</name>                                                                                                        
-      <snapshots>                                                                                                                                           
-        <enabled>true</enabled>                                                                                                                             
-      </snapshots>                                                                                                                                          
-    </pluginRepository>                                                                                                                                     
-  </pluginRepositories>   
+  <scm>
+    <connection>scm:hg:http://hg.nuxeo.org/tools/nuxeo-webengine-apt</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/tools/nuxeo-webengine-apt</developerConnection>
+    <url>http://hg.nuxeo.org/tools/nuxeo-webengine-apt/</url>
+  </scm>
+
+  <repositories>
+    <repository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/public-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <site>
+      <id>maven-website</id>
+      <url>scpexe://gironde.nuxeo.com/home/mavenweb/site/</url>
+    </site>
+    <repository>
+      <id>nuxeo-release</id>
+      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-release</url>
+    </repository>
+    <snapshotRepository>
+      <id>nuxeo-snapshot</id>
+      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-snapshot</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/public-snapshot</url>
+      <name>Nuxeo virtual snapshot repository</name>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
