--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>nuxeo-webengine-apt</artifactId>
   <name>Nuxeo WebEngine APT extensions</name>
   <description>WebEngine's APT extensions for annotation indexing.</description>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
 
   <profiles>
     <profile>
