--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo</groupId>
-    <artifactId>nuxeo-ecm</artifactId>
-    <version>5.2.0.m4</version>
+    <groupId>org.nuxeo.tools</groupId>
+    <artifactId>nuxeo-tools-parent</artifactId>
+    <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>org.nuxeo.build</groupId>
@@ -37,30 +38,6 @@
     </profile>
   </profiles>
 
-  <!--  <build>-->
-  <!--    <plugins>-->
-  <!--      <plugin>-->
-  <!--        <groupId>org.apache.maven.plugins</groupId>-->
-  <!--        <artifactId>maven-compiler-plugin</artifactId>-->
-  <!--        <configuration>-->
-  <!--          <source>1.5</source>-->
-  <!--          <target>1.5</target>-->
-  <!--        </configuration>-->
-  <!--      </plugin>-->
-  <!--      <plugin>-->
-  <!--        <groupId>org.apache.maven.plugins</groupId>-->
-  <!--        <artifactId>maven-jar-plugin</artifactId>-->
-  <!--        <configuration>-->
-  <!--          <archive>-->
-  <!--
-    <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-  -->
-  <!--          </archive>-->
-  <!--        </configuration>-->
-  <!--      </plugin>-->
-  <!--    </plugins>-->
-  <!--  </build>-->
-
   <developers>
     <developer>
       <id>BS</id>
@@ -86,55 +63,6 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-    <repository>
-      <id>public-snapshot</id>
-      <url>http://maven.nuxeo.org/public-snapshot</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
   </repositories>
-
-  <distributionManagement>
-    <site>
-      <id>maven-website</id>
-      <url>scpexe://gironde.nuxeo.com/home/mavenweb/site/</url>
-    </site>
-    <repository>
-      <id>nuxeo-release</id>
-      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-release</url>
-    </repository>
-    <snapshotRepository>
-      <id>nuxeo-snapshot</id>
-      <url>scpexe://amour.nuxeo.com/home/nexus/repositories/nuxeo-snapshot</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>public</id>
-      <url>http://maven.nuxeo.org/public</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>public-snapshot</id>
-      <url>http://maven.nuxeo.org/public-snapshot</url>
-      <name>Nuxeo virtual snapshot repository</name>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
 
 </project>
